<?xml version="1.0"?>
<package>

    <name>tractor</name>
    <version>0.0.0</version>
    <description>-</description>

    <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
    <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

    <license>-</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>moveit_core</build_depend>
    <run_depend>moveit_core</run_depend>

    <build_depend>moveit_ros_planning</build_depend>
    <run_depend>moveit_ros_planning</run_depend>

    <build_depend>eigen_conversions</build_depend>
    <run_depend>eigen_conversions</run_depend>

    <build_depend>interactive_markers</build_depend>
    <run_depend>interactive_markers</run_depend>

    <build_depend>eigen</build_depend>
    <run_depend>eigen</run_depend>

    <build_depend>moveit_ros_robot_interaction</build_depend>
    <run_depend>moveit_ros_robot_interaction</run_depend>

    <build_depend>pybind11_catkin</build_depend>
    <run_depend>pybind11_catkin</run_depend>

    <build_depend>kdl_parser</build_depend>
    <run_depend>kdl_parser</run_depend>

    <export>
    </export>

</package>
